workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_add_response_by_path_and_method_command__unassignable_response_result.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: unassignable_response_result.unwrap_err()
---
Validation(
    "Command failed validation: response id must be assignable to add response by path and method, \"AddResponseByPathAndMethod(AddResponseByPathAndMethod { response_id: \\\"response_1\\\", path_id: \\\"path_1\\\", http_method: \\\"POST\\\", http_status_code: 201 })\"",
)
